--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 
 *{
     font-family: sans-serif;
@@ -145,7 +145,7 @@
 }
 .advantage-content .box .text h4{
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 18px;
 }
 .abvantage-bottom{
     display: flex;
@@ -164,11 +164,11 @@
 
 
 /* advantage css end */
-=======
+
 .banner{
     width: 100%;
     background-color: #7da15c;
-  
+    float: left;
     text-align: center;
 }
 .banner-1{
@@ -182,7 +182,7 @@
     display: inline-block;
     color: white;
 }
-h1:after {
+.banner h1:after {
     left: -215px;
     background: #ffffff8a;
     content: "";
@@ -190,7 +190,7 @@ h1:after {
     top: 0;
     position: absolute;
 }
-h1:before {
+.banner h1:before {
     right: -215px;
     background: #ffffff8a;
     content: "";
@@ -229,4 +229,3 @@ h1:before {
 .slick-dots li button:before {
     font-size: 39px;
 }
->>>>>>> f0390afe2abc8b6d51ce0305e160788f8e4953d9
